# 8Beat

./: .gitignore  .gitmodules  ADSR.h  AudioSourceHandler.cpp  AudioSourceHandler.h  CMakeLists.txt  ChipTuneEngine.h  ChipTuneEngineListener.h  FFTResult.h  LICENSE  OpenALCallbacks.h  README.md  RELEASE_NOTES.md  SFX.h  Spectrum.h  Synthesizer.h  Waveform.h  WaveformData.h  WaveformGeneration.h  WaveformHelper.h  WaveformIO.h  copy_lib.sh  dependencies  dependencies_applaudio  dependencies_openal  forge.lock.toml  forge.recipe.toml  setup_and_build_demos.bat  setup_and_build_demos_applaudio.bat  setup_and_build_demos_applaudio_debian.sh  setup_and_build_demos_applaudio_macos.sh  setup_and_build_demos_debian.sh  setup_and_build_demos_macos.sh  setup_and_build_demos_openal_debian.sh  setup_and_build_demos_openal_macos.sh  static_analysis.cpp
8-Bit Audio Emulator Lib.xcodeproj/: project.pbxproj
8Beat.xcodeproj/: project.pbxproj
ChipTuneEngine_Internals/: ChipTuneEngineParser.h
Tests/: WaveformHelper_tests.h  build_unit_tests.sh  unit_tests.cpp
demos/: README_LINUX.md  README_MACOS.md  README_WINDOWS.md  build_all_demos.bat  build_all_demos.sh  build_all_demos_applaudio.bat  build_all_demos_applaudio.sh  build_all_demos_openal.sh  build_demo_1.bat  build_demo_1.sh  build_demo_10.sh  build_demo_10_applaudio.sh  build_demo_10_openal.sh  build_demo_1_applaudio.sh  build_demo_1_openal.sh  build_demo_2.sh  build_demo_2_applaudio.sh  build_demo_2_openal.sh  build_demo_3.sh  build_demo_3_applaudio.sh  build_demo_3_openal.sh  build_demo_4.sh  build_demo_4_applaudio.sh  (+31 more)
(+45 files in other folders)
